# naks_infosystem_auth

./: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
src/: _types.py  app.py  cli.py  configs.py  errors.py  models.py  settings.py
src/api/v1/: dependencies.py  routes.py
src/app/: config.py  configs.py
src/app/application/: dto.py
src/app/application/common/: __init__.py  exc.py
src/app/application/dto/: data.py  (+1 more)
src/app/main/: app.py
src/application/: dto.py
src/application/common/: exc.py
src/application/interactors/: auth.py  refresh_token.py  user.py
src/application/interfaces/: gateways.py  hasher.py
src/infrastructure/database/: mappers.py  setup.py
src/infrastructure/dto/: __init__.py  data.py
src/infrastructure/services/: hasher.py  jwt_service.py
src/main/: app.py  dependencies.py
src/migrations/: env.py
src/migrations/versions/: 14262e198076_init_migration.py  44cd20b6a7b4_init_migration.py
src/presentation/routes/: __init__.py  auth.py  exc_handler.py  root.py  user.py
src/presentation/shemas/: __init__.py  user.py
src/services/: auth_service.py  db_services.py
src/shemas/: __init__.py  refresh_token.py  request_shemas.py  select_shemas.py  user.py
src/utils/: DTOs.py  funcs.py
test/: conftest.py  funcs.py  storage.py  test_models.py  utils.py
test/test_api/: client.py  conftest.py  test_v1_api.py
test/test_presentation/: conftest.py  test_auth_endpoints.py  test_user_endpoints.py
test/test_services/: test_auth_service.py  test_db_services.py
test/test_shemas/: test_request_shemas.py
(+32 files in other folders)
