[tool.poetry]
name = "auth"
version = "0.1.1"
description = ""
authors = ["Nazhmutdin <gumuevnazhmutdin1248@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
python-jose = "^3.3.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
python-dateutil = "^2.9.0.post0"
asyncpg = "^0.29.0"
alembic = "^1.13.3"
dishka = "^1.3.0"
python-dotenv = "^1.0.1"
black = "^24.10.0"
redis = "^5.2.1"
naks-library = {git = "https://github.com/Nazhmutdin/naks_library.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
faker = "^30.6.0"
httpx = "^0.27.2"
pytest-dotenv = "^0.5.2"
anyio = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "./src"
env_files = ".test.env"
